--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a>Support</a>
         </div>
         <img class="wrldslogo" src="bilder/download.jfif">
-        <img class="login" src="bilder/login.png">
+        <img class="login" href="../PHP/login.php" src="bilder/login.png">
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="fa fa-bars"></i>
         </a>
