Litt mer rydding

--- a/HTML/createForum.HTML
+++ b/HTML/createForum.HTML
@@ -10,8 +10,8 @@
   <div class="Meny">
   <a href="../index.php" >Home</a>
   <a href="PHP/LoginScript/login.php">Login</a>
-  <a href="HTML/Contact.html">Contact</a>
-  <a href="HTML/createForum.PHP">Post Forum! </a>
+  <a href="./Contact.html">Contact</a>
+  <a href="./createForum.HTML">Post Forum! </a>
   </div>
 
   <div class="Title"> <h1> Create Your own Post!</h1> </div>
@@ -21,7 +21,7 @@
   </div>
 
   <div class="Input">
-    <form class="skriv" method="post" action="../PHP/registrert.php">
+    <form class="skriv" method="post" action="../PHP/lageForum/registrert.php">
       <input placeholder="Title" type="text" name="Title"><br>
       <textarea  style="resize: none;" placeholder="Text" class="textplass" type="text" name="Text"></textarea><br>
       <input placeholder="Author" type="text" name="Author">
