--- a/HTML/createForum.HTML
+++ b/HTML/createForum.HTML
@@ -9,7 +9,7 @@
 <div class="container">
   <div class="Meny">
   <a href="../index.php" >Home</a>
-  <a href="PHP/LoginScript/login.php">Login</a>
+  <a href="../PHP/LoginScript/login.php">Login</a>
   <a href="./Contact.html">Contact</a>
   <a href="./createForum.HTML">Post Forum! </a>
   </div>
