--- a/HTML/createForum.HTML
+++ b/HTML/createForum.HTML
@@ -1,6 +1,9 @@
 <html>
 <head>
     <title> Create Forum </title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/stylesForum.css" >
 </head>
 <body>
