Login Funker og Logout📭

--- a/HTML/createForum.HTML
+++ b/HTML/createForum.HTML
@@ -4,7 +4,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/stylesForum.css" >
+    <link type="text/css" rel="stylesheet" href="../css/stylesForum.css" />
 </head>
 <body>
   
@@ -24,7 +24,7 @@
   </div>
 
   <div class="Input">
-    <form class="skriv" method="post" action="../PHP/lageForum/registrert.php">
+    <form class="skriv" method="post" action="../PHP/lageForum/registrert.php" class="form">
       <input placeholder="Title" type="text" name="Title"><br>
       <textarea  style="resize: none;" placeholder="Text" class="textplass" type="text" name="Text"></textarea><br>
       <input placeholder="Author" type="text" name="Author">
@@ -32,7 +32,14 @@
      </form>
   </div>
 
-  <div class="Rules"></div>
+  <div class="Rules">
+    <h3>Rules</h3>
+    <ul>
+      <li>No swear words!</li>
+      <li>Anything illegal will be banned!</li>
+      <li>Frienldy rivalry only! Hating will be punished!</li>
+    </ul>
+  </div>
 </div>
 
 
