--- a/HTML/Contact.html
+++ b/HTML/Contact.html
@@ -12,9 +12,8 @@
 <div class="container">
   <div class="Meny">
   <a href="../index.php" >Home</a>
-  <a href="../PHP/LoginScript/login.php">Login</a>
   <a href="./Contact.html">Contact</a>
-  <a href="./createForum.HTML">Post Forum! </a>
+  <a href="../PHP/lageForum/createForum.php">Post Forum! </a>
   </div>
 
   <div class="Logo">
