--- a/HTML/Contact.html
+++ b/HTML/Contact.html
@@ -13,6 +13,7 @@
   <div class="Meny">
   <a href="../index.php" >Home</a>
   <a href="./Contact.html">Contact</a>
+  <a href="../PHP/FAQ.php">FAQ</a>
   <a href="../PHP/lageForum/createForum.php">Post Forum! </a>
   </div>
 
